Better way to fix vertical spacings.

--- a/static/index.css
+++ b/static/index.css
@@ -45,34 +45,40 @@ a.read-more {
     width: 80%;
     height: 50%;
     text-align: center;
+    table-layout: fixed;
+    display: table;
 }
 
 .main-title {
     font-family: 'Catamaran', sans-serif;
-    margin 0;
+    margin: 0;
     padding: 0;
+    display: table-row;
+}
+
+.title-text {
     -webkit-margin-before:0em;
     -webkit-margin-after:0em;
 }
 
-h2.main-title {
+h2.title-text {
     font-size: 3em;
     color: floralwhite;
 }
 
-h3.main-title {
+h3.title-text {
     font-size: 1.5em;
     color: azure;
 }
 
-h4.main-title {
+h4.title-text {
     font-size: 1em;
     color: azure;
 }
 
 .title-icons {
     margin-top: 1em;
-    display: inline-block;
+    display: table-row;
     height: 1.5em;
 }
 
@@ -97,6 +103,7 @@ h4.location-block {
     background-color: darksalmon;
     color: azure;
     border: 0px solid red;
+    display: table-row;
 }
 
 #PROJECTS {
